--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </div>
     </div>
 
-    
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/fe585a878e.js" crossorigin="anonymous"></script>
+</body>
 
 </html>
